simplify ForComprehensionGenerator